docs(*): JVM内存模型知识点